--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,4 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-serde_json = "1.0"
+axum = "0.8.8"
+pulldown-cmark = "0.13.0"
+rust-embed = "8.9.0"
+tokio = { version = "1.49.0", features = ["full"] }
